# finn-python-server

./: pyproject.toml
src/finn_python_server/: __init__.py
src/finn_python_server/bert/: bert_tesla.py  distilbert_tesla.py
src/finn_python_server/news/: googlerss_tesla_news.ipynb  news_data.py
src/finn_python_server/stock/: stock_data.py
src/stock/: stock_data.py
